--- a/deploy/bases/database/credentials.yaml
+++ b/deploy/bases/database/credentials.yaml
@@ -8,7 +8,7 @@ spec:
   data:
     MYSQL_USER: "shopware"
     MYSQL_DATABASE: "shopware"
-    MYSQL_HOST: "mysql"
+    MYSQL_HOST: "db"
     MYSQL_PORT: "3306"
   fields:
     - fieldName: "MYSQL_PASSWORD"
