--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "shopware/core": "v6.6.6.1",
     "shopware/elasticsearch": "*",
     "shopware/storefront": "*",
-    "symfony/flex": "~2"
+    "symfony/flex": "~2",
+    "league/flysystem-async-aws-s3": "^3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.6",
