--- a/deploy/bases/app/config/app.yaml
+++ b/deploy/bases/app/config/app.yaml
@@ -4,7 +4,7 @@ metadata:
   name: shopware-app-config
 data:
   APP_ENV: "prod"
-  APP_URL: "http://localhost:8000"
+  APP_URL: "http://shopware.test"
   LOCK_DSN: "redis://redis-cache:6379/4"
   OPENSEARCH_URL: "opensearch:9200"
   REDIS_SESSION_URL: "redis://redis-session:6379"
