--- a/deploy/bases/app/ingress.yaml
+++ b/deploy/bases/app/ingress.yaml
@@ -22,3 +22,27 @@ spec:
                 name: minio-shopware-hl
                 port:
                   number: 9000
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: storefront
+  labels:
+    app: shopware
+    component: web
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: "/"
+    nginx.ingress.kubernetes.io/proxy-body-size: "5m"
+spec:
+  ingressClassName: nginx
+  rules:
+    - host: shopware.test
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: app-server
+                port:
+                  number: 80
