--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "shopware/elasticsearch": "*",
     "shopware/storefront": "*",
     "symfony/flex": "~2",
-    "league/flysystem-async-aws-s3": "^3.0"
+    "league/flysystem-async-aws-s3": "^3.0",
+    "store.shopware.com/swagplatformdemodata": "^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.6",
@@ -19,6 +20,10 @@
     "symfony/web-profiler-bundle": "^7.0"
   },
   "repositories": [
+    {
+      "type": "composer",
+      "url": "https://packages.shopware.com"
+    },
     {
       "type": "path",
       "url": "custom/plugins/*",
