Added message consumer and scheduler

--- a/deploy/bases/app/kustomization.yaml
+++ b/deploy/bases/app/kustomization.yaml
@@ -9,6 +9,6 @@ resources:
 - shopware-init.yaml
 - app-server.yaml
 - ingress.yaml
-#- message-consumer.yaml
-#- job-scheduler.yaml
+- message-consumer.yaml
+- job-scheduler.yaml
 - app-server-dev.yaml
