Add more resources increase app-server replicas

--- a/deploy/bases/app/job-scheduler.yaml
+++ b/deploy/bases/app/job-scheduler.yaml
@@ -6,6 +6,7 @@ metadata:
     app: shopware
     component: async
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: shopware
@@ -26,7 +27,6 @@ spec:
             - bin/ci
             - scheduled-task:run
             - --memory-limit=512M
-            - --time-limit=295
             - -vv
           envFrom:
             - configMapRef:
