--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,7 +24,39 @@ jobs:
       - name: Create a Kind cluster
         uses: helm/kind-action@v1.11.0
         with:
-          node_image: kindest/node:v1.31.2
-      - name: Build Shopware
+          node_image: kindest/node:v1.34.0
+      - name: Install Kind-optimized ingress controller
         run: |
-          skaffold build --file-output=.build-artifacts
+          kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml
+      - name: Update Cluster DNS to resolve shopware.test and media.test domains
+        shell: bash
+        run: |
+          # Fetch ingress IP address.
+          for i in {1..20}; do
+            INGRESS_IP=$(kubectl get svc ingress-nginx-controller \
+              -n ingress-nginx \
+              -o jsonpath='{.spec.clusterIP}')
+            
+            # Check if $INGRESS_IP matches a simplistic IPv4 pattern: x.x.x.x
+            if [[ $INGRESS_IP =~ ^[0-9]+\.[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+              # Found the valid IP address.
+              break
+            else
+              echo "Ingress IP not valid yet. Attempt: $i/20. Sleeping 1s..."
+              sleep 1
+            fi
+          done
+          if [ $i -eq 20 ]; then
+              echo "Error: Ingress IP not valid after 20 attempts."
+          fi
+          
+          # Update CoreDNS configmap to resolve shopware.test and media.test domains.
+          kubectl get configmap coredns -n kube-system -o yaml > coredns.yaml
+          sed -i "/^.*kubernetes cluster.local/ i \ \ \ \ \ \ \ \ hosts {\n\ \ \ \ \ \ \ \ \ \ $INGRESS_IP shopware.test\n\ \ \ \ \ \ \ \ \ \ $INGRESS_IP media.test\n\ \ \ \ \ \ \ \ \ \ fallthrough\n\ \ \ \ \ \ \ \ }" coredns.yaml
+          kubectl apply -n kube-system -f coredns.yaml
+#      - name: Build Shopware
+#        run: |
+#          skaffold build --file-output=.build-artifacts
+#      - name: Deploy Shopware to local Kind cluster
+#        run: |
+#          skaffold run --status-check=true --tolerate-failures-until-deadline=true
