Test deployment and starting cluster

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,6 +8,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
       - uses: yokawasa/action-setup-kube-tools@v0.11.2
         with:
           setup-tools: |
@@ -19,15 +20,25 @@ jobs:
           helm: '3.16.3'
           kustomize: '5.4.2'
           skaffold: '2.13.2'
+
+      - name: Cache skaffold artifacts and config
+        uses: actions/cache@v4
+        with:
+          path: ~/.skaffold/
+          key: fixed-${{ github.sha }}
+
       - name: Create auth.json
         run: echo '${{ secrets.COMPOSER_AUTH }}' > $GITHUB_WORKSPACE/auth.json
+
       - name: Create a Kind cluster
         uses: helm/kind-action@v1.11.0
         with:
           node_image: kindest/node:v1.32.0
+
       - name: Install Kind-optimized ingress controller
         run: |
           kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml
+
       - name: Update Cluster DNS to resolve shopware.test and media.test domains
         shell: bash
         run: |
@@ -54,9 +65,9 @@ jobs:
           kubectl get configmap coredns -n kube-system -o yaml > coredns.yaml
           sed -i "/^.*kubernetes cluster.local/ i \ \ \ \ \ \ \ \ hosts {\n\ \ \ \ \ \ \ \ \ \ $INGRESS_IP shopware.test\n\ \ \ \ \ \ \ \ \ \ $INGRESS_IP media.test\n\ \ \ \ \ \ \ \ \ \ fallthrough\n\ \ \ \ \ \ \ \ }" coredns.yaml
           kubectl apply -n kube-system -f coredns.yaml
-#      - name: Build Shopware
-#        run: |
-#          skaffold build --file-output=.build-artifacts
-#      - name: Deploy Shopware to local Kind cluster
-#        run: |
-#          skaffold run --status-check=true --tolerate-failures-until-deadline=true
+      - name: Build Shopware
+        run: |
+          skaffold build --file-output=.build-artifacts
+      - name: Deploy Shopware to local Kind cluster
+        run: |
+          skaffold run --status-check=true --tolerate-failures-until-deadline=true
