--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,3 +1,4 @@
+# nonk8s
 apiVersion: skaffold/v4beta11
 kind: Config
 metadata:
@@ -113,3 +114,23 @@ deploy:
         repo: https://bitnami-labs.github.io/sealed-secrets
         version: 2.16.1
         wait: true
+verify:
+  - name: Verify if Shopware is up
+    executionMode:
+      kubernetesCluster: {}
+    container:
+      name: curl
+      image: curlimages/curl:8.10.0
+      command:
+        - /bin/sh
+      args:
+        - -c
+        - |
+          # test if homepage is accessible
+          curl \
+            -kILSs \
+            --fail \
+            --retry 10 \
+            --retry-all-errors \
+            http://shopware.test/
+
