--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -73,3 +73,7 @@ jobs:
       - name: Deploy Shopware to local Kind cluster
         run: |
           skaffold run --status-check=true --tolerate-failures-until-deadline=true
+
+      - name: Run smoke test
+        run: |
+          skaffold verify -a .build.artifacts
