--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -32,11 +32,12 @@ manifests:
       - deploy/overlays/dev
 deploy:
   statusCheck: true
+  # fail deployment if it doesn't stabilize within 20 minutes.
   statusCheckDeadlineSeconds: 1200
   kubectl:
     defaultNamespace: shopware
   helm:
-    # Install all dependent operators
+    # Install all required operators
     releases:
       - name: kubernetes-secret-generator
         repo: https://helm.mittwald.de
