Experimenting with Shopware playwright e2e test framework #1

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -75,7 +75,7 @@ jobs:
         run: |
           skaffold run --status-check=true --tolerate-failures-until-deadline=true
 
-      - name: Run smoke test
+      - name: Run E2E tests
         run: |
           skaffold verify -a .build-artifacts
 
