--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -23,6 +23,9 @@ build:
           secrets:
             - id: composer_auth
               src: auth.json
+      - image: kiweeteam/shopware-e2e
+        docker:
+          dockerfile: e2e.Dockerfile
   local:
     useBuildkit: true
     concurrency: 3
@@ -116,21 +119,24 @@ deploy:
         version: 2.16.1
         wait: true
 verify:
-  - name: smoke-test
-    executionMode:
-      kubernetesCluster: {}
+  - name: e2e
     container:
-      name: curl
-      image: curlimages/curl:8.10.0
-      command:
-        - /bin/sh
-      args:
-        - -c
-        - |
-          # test if homepage is accessible
-          curl \
-            -kILSs \
-            --fail \
-            --retry 10 \
-            --retry-all-errors \
-            http://shopware.test/
+        name: e2e
+        image: kiweeteam/shopware-e2e
+        env:
+          - name: CI
+            value: true
+        command:
+          - /bin/sh
+        args:
+          - -c
+          - |
+            set -e
+            echo "Waiting until the homepage is accessible..."
+            curl -kILSs --fail --retry 10 --retry-all-errors http://shopware.test/            
+            echo "Running E2E tests..."
+            npx playwright test
+            echo "E2E tests finished."
+    executionMode:
+      kubernetesCluster:
+        jobManifestPath: deploy/overlays/dev/app/e2e.yaml
